--- a/.github/workflows/clean_excel.yml
+++ b/.github/workflows/clean_excel.yml
@@ -1,1 +1,35 @@
+name: Clean Excel File
 
+on:
+  push:
+    paths:
+      - 'data/*.xlsx'
+
+jobs:
+  clean:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install pandas openpyxl
+
+      - name: Run cleaning script
+        run: |
+          python scripts/clean_excel.py data/archivo.xlsx
+
+      - name: Commit cleaned file
+        run: |
+          git config user.name "github-actions"
+          git config user.email "actions@github.com"
+          git add data/archivo.xlsx
+          git commit -m "Auto-clean Excel file (remove Nombre column)" || echo "No changes to commit"
+          git push
