--- a/.github/workflows/clean_excel.yml
+++ b/.github/workflows/clean_excel.yml
@@ -1,17 +1,24 @@
-name: Clean Excel File
+name: Clean Excel Files
 
 on:
   push:
     paths:
-      - 'data/*.xlsx'
+      - 'data/**/*.xlsx'
 
 jobs:
   clean:
+    # 🔒 Evita loop infinito (no se ejecuta si el commit lo hizo el bot)
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -20,16 +27,34 @@ jobs:
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install pandas openpyxl
 
-      - name: Run cleaning script
+      - name: Process all Excel files
         run: |
-          python scripts/clean_excel.py data/archivo.xlsx
+          shopt -s globstar
+          files=(data/**/*.xlsx)
 
-      - name: Commit cleaned file
+          if [ ${#files[@]} -eq 0 ]; then
+            echo "No Excel files found."
+            exit 0
+          fi
+
+          for file in "${files[@]}"; do
+            echo "Processing $file"
+            python scripts/clean_excel.py "$file"
+          done
+
+      - name: Commit and push changes if needed
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
-          git add data/archivo.xlsx
-          git commit -m "Auto-clean Excel file (remove Nombre column)" || echo "No changes to commit"
-          git push
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add data/**/*.xlsx
+
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+          else
+            git commit -m "Auto-clean Excel files (keep only SUC and HC)"
+            git push
+          fi
